...
            "state": "translated",
            "value": "Seçili öğeleri Yapıştırma Yığınına ekle"
          }
        }
      }
    },
    "Add to Paste Stack": {
      "localizations": {
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Yapıştırma Yığınına Ekle"
          }
...
            "state": "translated",
            "value": "Dengeli"
          }
        }
      }
    },
    "Behavior": {
      "localizations": {
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Davranış"
          }
...
            "state": "translated",
            "value": "Dahili"
          }
        }
      }
    },
    "Item Details": {
      "localizations": {
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Öğe Ayrıntıları"
          }
...
            "state": "translated",
            "value": "Yeni koleksiyon adı"
          }
        }
      }
    },
    "Newest First": {
      "localizations": {
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Önce En Yeni"
          }
...
            "state": "translated",
            "value": "Scroll Reverse Kontrolünü Aç"
          }
        }
      }
    },
    "Open Settings": {
      "localizations": {
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Ayarları Aç"
          }
...
            "state": "translated",
            "value": "Özel"
          }
        }
      }
    },
    "Private Mode": {
      "localizations": {
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Özel Mod"
          }
...
            "state": "translated",
            "value": "Tümünü %100'e Sıfırla"
          }
        }
      }
    },
    "Reset Paste Stack": {
      "localizations": {
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Yapıştırma Yığınını Sıfırla"
          }
...
            "state": "translated",
            "value": "Chromium Eklentisini Kur"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Ayarlar"
          }
...
            "state": "translated",
            "value": "Kontrol Merkezi İkonunu Göster"
          }
        }
      }
    },
    "Show Details": {
      "localizations": {
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Ayrıntıları Göster"
          }
...
            "state": "translated",
            "value": "Yükleme"
          }
        }
      }
    },
    "Uppercase": {
      "localizations": {
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Büyük Harf"
          }
...
